# I24_logging

./: .gitignore  README.md  log_test.py  log_writer.py  setup.cfg
src/i24_logger/: log_test.py  log_writer.py  test1.py
