[metadata]
name = i24_logging
version = 1.1
author = William Barbour
author_email = william.w.barbour@vanderbilt.edu
description = Asynchronous, multiple destination log-handling with a one-liner substitution of log statements for print statements.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lab-Work/I24_logging

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = python-logstash-async


[options.packages.find]
where = src
